added deps and layout

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ requires = [
 [tool.briefcase.app.simplethanks.linux]
 requires = [
     "toga-gtk~=0.3.1",
+    "playsound",
 ]
 
 [tool.briefcase.app.simplethanks.linux.system.debian]
