--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ project_name = "Simple Thanks"
 bundle = "de.cmg"
 version = "0.0.1"
 url = "https://github.com/tct123/simplethanks"
-license = "MIT license"
+license.file = "LICENSE"
 author = "tct123"
 author_email = "42028373+tct123@users.noreply.github.com"
 
