--- a/pyproject.toml
+++ b/pyproject.toml
@@ -169,6 +169,12 @@ requires = [
     "toga-android~=0.4.5"
 ]
 
+build_gradle_dependencies = [
+    "androidx.appcompat:appcompat:1.0.2",
+    "androidx.constraintlayout:constraintlayout:1.1.3",
+    "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
+]
+
 # Web deployments
 [tool.briefcase.app.simplethanks.web]
 requires = [
