--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,10 @@ formal_name = "Simple Thanks"
 description = "A simple thank you"
 long_description = """More details about the app should go here.
 """
-icon = "src/simplethanks/resources/simplethanks"
 sources = ["src/simplethanks"]
 test_sources = ["tests"]
 
-requires = ["mylocale"]
+requires = []
 test_requires = ["pytest"]
 
 [tool.briefcase.app.simplethanks.macOS]
@@ -42,7 +41,8 @@ system_runtime_requires = [
     # Dependencies that GTK looks for at runtime
     "libcanberra-gtk3-module",
     # Needed to provide WebKit2 at runtime
-    # "gir1.2-webkit2-4.0",
+    # Note: Debian 11 and Ubuntu 20.04 require gir1.2-webkit2-4.0 instead
+    # "gir1.2-webkit2-4.1",
 ]
 
 [tool.briefcase.app.simplethanks.linux.system.rhel]
@@ -77,12 +77,11 @@ system_runtime_requires = [
     "gtk3",
     # Needed to support Python bindings to GTK
     "gobject-introspection",
-    "typelib(Gtk)=3.0",
+    "typelib(Gtk) = 3.0",
     # Dependencies that GTK looks for at runtime
-    "libcanberra-gtk3-0",
+    "libcanberra-gtk3-module",
     # Needed to provide WebKit2 at runtime
-    # "libwebkit2gtk3",
-    # "typelib(WebKit2)",
+    # "libwebkit2gtk3", "typelib(WebKit2)",
 ]
 
 [tool.briefcase.app.simplethanks.linux.system.arch]
@@ -113,7 +112,7 @@ system_runtime_requires = [
 ]
 
 [tool.briefcase.app.simplethanks.linux.appimage]
-manylinux = "manylinux2014"
+manylinux = "manylinux_2_28"
 
 system_requires = [
     # Needed to compile pycairo wheel
@@ -128,11 +127,12 @@ system_requires = [
     "PackageKit-gtk3-module",
     "gvfs-client",
 ]
+
 linuxdeploy_plugins = ["DEPLOY_GTK_VERSION=3 gtk"]
 
 [tool.briefcase.app.simplethanks.linux.flatpak]
 flatpak_runtime = "org.gnome.Platform"
-flatpak_runtime_version = "44"
+flatpak_runtime_version = "45"
 flatpak_sdk = "org.gnome.Sdk"
 
 [tool.briefcase.app.simplethanks.windows]
@@ -145,10 +145,14 @@ requires = ["toga-iOS~=0.4.6", "std-nslog~=1.0.0"]
 [tool.briefcase.app.simplethanks.android]
 requires = ["toga-android~=0.4.6"]
 
+base_theme = "Theme.MaterialComponents.Light.DarkActionBar"
+
 build_gradle_dependencies = [
-    "androidx.appcompat:appcompat:1.0.2",
-    "androidx.constraintlayout:constraintlayout:1.1.3",
+    "com.google.android.material:material:1.11.0",
+    # Needed for DetailedList
     "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
+    # Needed for MapView
+    "org.osmdroid:osmdroid-android:6.1.0",
 ]
 
 # Web deployments
