--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ long_description = """More details about the app should go here.
 sources = ["src/simplethanks"]
 test_sources = ["tests"]
 
-requires = []
+requires = ["mylocale"]
 test_requires = ["pytest"]
 
 [tool.briefcase.app.simplethanks.macOS]
