--- a/pyproject.toml
+++ b/pyproject.toml
@@ -145,7 +145,7 @@ requires = ["toga-iOS~=0.4.7", "std-nslog~=1.0.0"]
 [tool.briefcase.app.simplethanks.android]
 requires = ["toga-android~=0.4.7"]
 
-base_theme = "Theme.MaterialComponents.Light.DarkActionBar"
+base_theme = "Theme.Material3.DynamicColors.DayNight"
 
 build_gradle_dependencies = [
     "com.google.android.material:material:1.12.0",
