--- a/.github/workflows/build-debian.yml
+++ b/.github/workflows/build-debian.yml
@@ -33,5 +33,8 @@ jobs:
           pip install beeware briefcase toga --upgrade
 
       # 5. Run tests
-      - name: Run tests
-        run: pytest
+      #- name: Run tests
+      #  run: pytest
+      - name: Build
+        run: |
+          briefcase package
