--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install Ubuntu-dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libssl-dev libffi-dev python3-dev build-essential
+          sudo apt-get install -y libssl-dev libffi-dev python3-dev build-essential git build-essential pkg-config python3-dev python3-venv libgirepository1.0-dev libcairo2-dev gir1.2-gtk-3.0 libcanberra-gtk3-module
 
       # 3. Setup Python
       - name: Setup Python
