--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,11 @@ long_description = """More details about the app should go here.
 sources = ["src/simplethanks"]
 test_sources = ["tests"]
 
-requires = ["mylocale", "miniaudio"]
+requires = [
+    "git+https://github.com/tct123/simplethanks.git",
+    "mylocale",
+    "miniaudio",
+]
 test_requires = ["pytest"]
 
 [tool.briefcase.app.simplethanks.macOS]
