--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 [tool.briefcase]
 project_name = "Simple Thanks"
 bundle = "de.cmg"
-version = "0.0.3"
+version = "24.12.18"
 url = "https://github.com/tct123/simplethanks"
 license.file = "LICENSE"
 author = "tct123"
@@ -16,7 +16,7 @@ long_description = """More details about the app should go here.
 sources = ["src/simplethanks"]
 test_sources = ["tests"]
 
-requires = ["myupdater==0.1.0", "mylocale", "miniaudio"]
+requires = ["myupdater", "mylocale", "miniaudio"]
 test_requires = ["pytest"]
 
 [tool.briefcase.app.simplethanks.macOS]
